# organizational_structure_api

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
src/: asgi.py  settings.py  urls.py  wsgi.py
src/apps/departments/: admin.py  apps.py  models.py  repositories.py  urls.py  validators.py
src/apps/departments/migrations/: 0001_initial.py
src/apps/departments/serializers/: department.py  department_retrieve.py  department_tree.py  employee.py
src/apps/departments/services/: department.py  employee.py
src/apps/departments/views/: department.py  employee.py
src/conf/: settings.py  urls.py  wsgi.py
src/contrib/logging/: filters.py
tests/: factories.py
tests/unit/services/: test_department_validator.py
tests/unit/validators/: test_department_validator.py
